--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,9 @@
-h1 {
+a.h1 {
   font-family: "Roboto Slab";
-  font-size: 45px;
+  font-size: 50px;
   text-align: center;
   padding: 2%;
-  background-color: #eee;
+  /* background-color: #eee; */
   color: rgb(80, 42, 31);
 }
 
@@ -19,10 +19,10 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   position: absolute;
-  top: 10%;
+  top: 0%;
   left: 23%;
-  right: 5%;
+  right: 3%;
   padding: 4%;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
 }
