--- a/client/src/components/AddItemForm.css
+++ b/client/src/components/AddItemForm.css
@@ -1,49 +1,46 @@
 #add-item-form {
   padding: 3%;
   text-align: center;
-  font-family: "Roboto Slab";
+  /* font-family: "Roboto Slab"; */
 }
 
-#input-url-container {
-  /* margin: 1%; */
-}
-
-#input-url {
-  margin: 1%;
-  padding: 8px;
-  background-color: #f1f1f1;
+#new-item-url {
+  width: 100%;
+  padding: 6px;
+  background-color: #eeeeee;
   border: none;
+  border-radius: 5px;
 }
 
 select {
-  width: 60%;
+  width: 100%;
   padding: 8px;
   border: none;
-  border-radius: 4px;
-  background-color: #f1f1f1;
+  border-radius: 5px;
+  background-color: #eeeeee;
 }
 
-#input-category-container {
+#new-item-category-container {
   margin: 1%;
 }
 
-#input-category {
+#new-item-category {
   margin: 1%;
 }
 
-#input-color-container {
+#new-item-color-container {
   margin: 2%;
 }
 
-#input-color {
+#new-item-color {
   margin: 1%;
 }
 
-#input-season-container {
+#new-item-season-container {
   margin: 2%;
 }
 
-#input-season {
+#new-item-season {
   margin: 1%;
 }
 
@@ -54,4 +51,5 @@ select {
   background-color: rgb(63, 50, 50);
   color: whitesmoke;
   padding: 5px;
+  border-radius: 5px;
 }
