--- a/client/src/components/AddItemForm.css
+++ b/client/src/components/AddItemForm.css
@@ -4,14 +4,14 @@
   /* font-family: "Roboto Slab"; */
 }
 
-#new-item-url {
+/* #new-item-url {
   width: 100%;
   padding: 6px;
   background-color: #eeeeee;
   border: none;
   border-radius: 5px;
-}
-
+} */
+/* 
 select {
   width: 100%;
   padding: 8px;
@@ -42,14 +42,10 @@ select {
 
 #new-item-season {
   margin: 1%;
-}
+} */
 
 #submit-button {
-  width: 8%;
-  text-align: center;
-  border: none;
-  background-color: rgb(63, 50, 50);
-  color: whitesmoke;
-  padding: 5px;
-  border-radius: 5px;
+  background-color: rgb(63, 50, 50)!important;
+  border-color: rgb(63, 50, 50)!important;
+  color: whitesmoke!important;
 }
