Checkbox filtering working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,8 +19,9 @@ a.h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   position: absolute;
+  width: 75%;
   top: 0%;
-  left: 23%;
+  left: 25%;
   right: 3%;
   padding: 4%;
   background-color: white;
