--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,12 +4,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
-    min-height: 100%;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
+    height: 100vh;
 }
 
 html, body {
     height: 100%;
     margin: 0;
-  }
+}
+
+span {
+    vertical-align: middle;
+    position: relative;
+    top: 185px;
+}
   
